Bug fixed: When MUI menu is opened, it adds extra padding and removes overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,5 +12,14 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-  gap: 1rem
+  gap: 1rem;
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  padding: 2rem;
+  flex-grow: 1;
+  /* overflow: auto; */
 }
